RESOLVED FIXED184035
[GStreamer] Enhance debugging in the BasePlayer
https://bugs.webkit.org/show_bug.cgi?id=184035
Summary [GStreamer] Enhance debugging in the BasePlayer
Thibault Saunier
Reported 2018-03-27 05:59:58 PDT
[GStreamer] Enhance debugging in the BasePlayer
Attachments
Patch (13.74 KB, patch)
2018-03-27 06:04 PDT, Thibault Saunier
no flags
Patch (15.43 KB, patch)
2018-03-27 06:21 PDT, Thibault Saunier
no flags
Patch (15.44 KB, patch)
2018-03-27 08:43 PDT, Thibault Saunier
no flags
Thibault Saunier
Comment 1 2018-03-27 06:04:22 PDT
Thibault Saunier
Comment 2 2018-03-27 06:21:46 PDT
Philippe Normand
Comment 3 2018-03-27 07:41:15 PDT
Broke WPE build: /home/ews/igalia-wpe-ews/WebKit/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp: In lambda function: /home/ews/igalia-wpe-ews/WebKit/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:384:39: error: ‘this’ was not captured for this lambda function GST_DEBUG_OBJECT(pipeline(), "scheduling initializationDataEncountered event for %s with concatenated init datas size of %" G_GSIZE_FORMAT, eventKeySystemIdString.utf8().data(), initData.size()); ^ /home/ews/igalia-wpe-ews/WebKit/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:384:39: error: cannot call member function ‘GstElement* WebCore::MediaPlayerPrivateGStreamerBase::pipeline() const’ without object
Thibault Saunier
Comment 4 2018-03-27 08:43:44 PDT
WebKit Commit Bot
Comment 5 2018-03-27 09:25:57 PDT
Comment on attachment 336589 [details] Patch Clearing flags on attachment: 336589 Committed r229997: <https://trac.webkit.org/changeset/229997>
WebKit Commit Bot
Comment 6 2018-03-27 09:25:58 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2018-03-27 09:26:15 PDT
Note You need to log in before you can comment on or make changes to this bug.